# cakekv

./: README.md  explore.ipynb  install.sh  pyproject.toml  ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAINYaUmJHJ7F6DGftrgOTY6jpB9frHHJnxLoxpGj1kcEF voquangtri2021@example.com  ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAINYaUmJHJ7F6DGftrgOTY6jpB9frHHJnxLoxpGj1kcEF voquangtri2021@example.com.pub
cake/: cake_cache.py  monkeypatch.py  monkeypatch_attention_analysis.py  utils.py
cake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cake/model/: modify_llama.py  modify_llama_attention_analysis.py  modify_llama_induction.py  modify_mistral.py  modify_qwen2.py
data/: explore.ipynb
experiments/LongBench/: BASIC_README.md  README_attention_analysis.md  SIMPLE_USAGE.md  attention_analysis_utils.py  eval.py  metrics.py  pred_cake.py  pred_cake_attention_analysis.py  run_attention_analysis.py  simple_llama_attention.py  simple_view_attention.py  visualize_attention.py
experiments/LongBench/config/: model2maxlen.json  model2path.json  model2tau.json
images/: explore.ipynb  metric_utils.py
