[build-system]
requires = ["setuptools", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "cake"
version = "0.0.1"

dependencies = [
    "rouge",
    "tokenizers",
    "rouge_score",
    "numpy",
    "fuzzywuzzy",
    "jieba==0.42.1",
    "jinja2==3.1.0",
    "datasets",
    "accelerate",
    "tqdm==4.66.1",
    "icetk==0.0.7",
    "transformers==4.43.3"
]

[tool.setuptools.packages.find]
where = ["."]
